--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "temp",
+  "name": "myshare",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,7 +13,6 @@
     "@tailwindcss/cli": "^4.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
-    "consolidate": "^0.16.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -21,7 +20,6 @@
     "mariadb": "^3.4.0",
     "mysql2": "^3.12.0",
     "path": "^0.12.7",
-    "swig": "^1.4.2",
     "tailwindcss": "^3.4.17",
     "typeorm": "^0.3.20"
   },
